--- a/style.css
+++ b/style.css
@@ -36,10 +36,12 @@ header.startup h1 {
 
 .btn {
     /*Pour changer la forme du texte. (Gras, mince, etc)*/
+    display: flex;
     font-weight: 700;
     text-transform: uppercase;
     border-radius: 300px;
     font-family: 'Montserrat', sans-serif;
+    align-items: flex-start;
 }
 
 .btn-xl {
